src/core-crm/objects/Contact_Matching_Staging__c/Contact_Matching_Staging__c.object-meta.xml
<CustomObject>
    <description>Used for integration end point for manage Creation and updates to Contact data via Contact Matching process to preserve the integrity of data.</description>
    <label>Contact Matching Staging</label>
    <nameField>
        <displayFormat>CMS-{0000000}</displayFormat>
        <label>Contact Matching Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Matching Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>