src/core-crm/objects/Contact_Matching_Staging__c/fields/Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process__c</fullName>
    <description>Indicating the record&apos;s state whether to be actioned with insert, update or processed</description>
    <label>Batch Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Batch_Process</valueSetName>
    </valueSet>
</CustomField>