src/core-crm/objects/Contact_Matching_Staging__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Person&apos;s Birth Date</description>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>