src/core-crm/objects/Contact_Matching_Staging__c/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <description>The indicator to flag whether a student is considered domestic or international</description>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>