src/core-crm/objects/Contact_Matching_Staging__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matching Contact Record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Matching Stagings</relationshipLabel>
    <relationshipName>Contact_Matching_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>