src/core-crm/objects/Contact_Matching_Staging__c/fields/Date_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Date_Deceased__c</fullName>
    <description>The date we marked the contact as deceased</description>
    <label>Date Deceased</label>
    <type>Date</type>
</CustomField>