src/core-crm/objects/Contact_Matching_Staging__c/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <description>Indicator to flag if contact has deceased</description>
    <defaultValue>false</defaultValue>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>