src/core-crm/objects/Contact_Matching_Staging__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The personal email address of a person</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>