src/core-crm/objects/Contact_Matching_Staging__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Person&apos;s First Name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>