src/core-crm/objects/Contact_Matching_Staging__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Person&apos;s Last Name</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>