src/core-crm/objects/Contact_Matching_Staging__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <description>City / Suburb component of the address</description>
    <label>Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>