src/core-crm/objects/Contact_Matching_Staging__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <description>The Country component of the address</description>
    <label>Mailing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>