src/core-crm/objects/Contact_Matching_Staging__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <description>The State component of the address</description>
    <label>Mailing State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>