src/core-crm/objects/Contact_Matching_Staging__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <description>Street component of the address</description>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>