src/core-crm/objects/Contact_Matching_Staging__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <description>Person&apos;s Middle Name</description>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>