src/core-crm/objects/Contact_Matching_Staging__c/fields/Mobile_No_Locale__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_Locale__c</fullName>
    <description>The mobile number with out Local prefix (Country dialling code)</description>
    <label>Mobile (No Locale)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>