src/core-crm/objects/Contact_Matching_Staging__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <description>The fully formatted mobile number</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>