src/core-crm/objects/Contact_Matching_Staging__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number (LandLine)</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>