src/core-crm/objects/Contact_Matching_Staging__c/fields/Preferred_Given_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Given_Name__c</fullName>
    <description>The Preferred First Name the person would like to be communicated by</description>
    <label>Preferred Given Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>