src/core-crm/objects/Contact_Matching_Staging__c/fields/QUT_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Employee_ID__c</fullName>
    <description>The employee identifier assigned to the person by HR system</description>
    <label>QUT Employee ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>