src/core-crm/objects/Contact_Matching_Staging__c/fields/QUT_Identity_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Identity_ID__c</fullName>
    <description>The global Identity assigned to the person</description>
    <label>QUT Identity ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>