src/core-crm/objects/Contact_Matching_Staging__c/fields/QUT_Learner_Email__c.field-meta.xml
<CustomField>
    <fullName>QUT_Learner_Email__c</fullName>
    <description>The QUT student email address</description>
    <label>QUT Learner Email</label>
    <type>Email</type>
</CustomField>