src/core-crm/objects/Contact_Matching_Staging__c/fields/QUT_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>QUT_Staff_Email__c</fullName>
    <description>The QUT staff email address</description>
    <label>QUT Staff Email</label>
    <type>Email</type>
</CustomField>