src/core-crm/objects/Contact_Matching_Staging__c/fields/QUT_Staff_Username__c.field-meta.xml
<CustomField>
    <fullName>QUT_Staff_Username__c</fullName>
    <description>The user name assigned for staff login</description>
    <label>QUT Staff Username</label>
    <length>10</length>
    <type>Text</type>
</CustomField>