src/core-crm/objects/Contact_Matching_Staging__c/fields/QUT_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Student_ID__c</fullName>
    <description>The Student Id issued for the person</description>
    <label>QUT Student ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>