src/core-crm/objects/Contact_Matching_Staging__c/fields/QUT_Student_Username__c.field-meta.xml
<CustomField>
    <fullName>QUT_Student_Username__c</fullName>
    <description>The User Name assignee for Student Login</description>
    <label>QUT Student Username</label>
    <length>10</length>
    <type>Text</type>
</CustomField>