src/core-crm/objects/Contact_Matching_Staging__c/fields/Residential_City__c.field-meta.xml
<CustomField>
    <fullName>Residential_City__c</fullName>
    <description>City / Suburb component of the address</description>
    <label>Residential City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>