src/core-crm/objects/Contact_Matching_Staging__c/fields/Residential_Country__c.field-meta.xml
<CustomField>
    <fullName>Residential_Country__c</fullName>
    <description>The Country component of the address</description>
    <label>Residential Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>