src/core-crm/objects/Contact_Matching_Staging__c/fields/Residential_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Residential_PostalCode__c</fullName>
    <description>The Post Code component of the address</description>
    <label>Residential Zip/Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>