src/core-crm/objects/Contact_Matching_Staging__c/fields/Residential_State__c.field-meta.xml
<CustomField>
    <fullName>Residential_State__c</fullName>
    <description>The State component of the address</description>
    <label>Residential State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>