src/core-crm/objects/Contact_Matching_Staging__c/fields/Residential_Street__c.field-meta.xml
<CustomField>
    <fullName>Residential_Street__c</fullName>
    <description>Street component of the address</description>
    <label>Residential Street</label>
    <type>TextArea</type>
</CustomField>