src/core-crm/objects/Contact_Matching_Staging__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>The Title/ Salutation person has nominated to be used for communications and Addressing</description>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>