src/core-crm/objects/Contact_Matching_Staging__c/fields/Staff_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Staff_End_Date__c</fullName>
    <description>The end date of a staffs employment</description>
    <label>Staff End Date</label>
    <type>Date</type>
</CustomField>