src/core-crm/objects/Contact_Matching_Staging__c/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <description>The personal work email address</description>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>